# homework_03

./: .gitignore  repository.txt
A/: .env.example  01_model_serving_student.ipynb  Dockerfile  Dockerfile.naive  airbnb-serving-secret.examlpe.yml  pyproject.toml  repository.md  requirements.txt
A/k8s/: deployment.yaml  service.yaml
A/reports/: docker_size_report.md
A/src/: config.py
A/src/airbnb_serving/: app.py  model_loader.py  predictor.py  schema.py
A/src/airbnb_serving.egg-info/: PKG-INFO  SOURCES.txt
B/HW3_Student/: SHARED.txt  hw03_credentials_handout.csv
B/HW3_Student/HW3_A/: encoder_bundle.ipynb
B/HW3_Student/HW3_A/bundle/: MANIFEST.json  metadata.json  predict.py
B/HW3_Student/HW3_A/scripts/: 01_upload_to_minio.sh
B/HW3_Student/HW3_B/: compose.yaml  requirements.txt
B/HW3_Student/HW3_B/app/: client_minio.py  client_pg.py  client_qdrant.py  config.py  main.py  model_loader.py  predictor.py  schemas.py  search.py
B/HW3_Student/HW3_C/templates/: 01_deployment.yaml  02_service.yaml  03_configmap.yaml  04_secret.yaml  05_hpa.yaml  06_pdb.yaml
